# legal-research-assistant

./: .env.example  .gitignore  API_SWITCH_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  Makefile  QUICKSTART.md  README.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_DEPLOYMENT_GUIDE.md  __init__.py  app.py  configure_api.py  install_simple.py  pyproject.toml  requirements-original.txt  requirements-streamlit.txt  requirements.txt  restart_app.bat  run.bat  run_app.bat  setup.bat  setup.py  start_app.bat  streamlit_app.py  test_api_keys.py  test_app_startup.py  test_chroma_config.py  test_deployment.py  test_document_processing.py  test_enhanced_flow.py  test_event_loop.py  test_fallback_store.py  test_fixed_regex.py  test_regex.py  test_ui_fixes.py  test_ux_flow.py  test_vector_store_sharing.py
config/: settings.py
data/sample_documents/: employment_agreement.txt  ip_license_agreement.txt  service_agreement.txt
src/: __init__.py  api_providers.py
src/evaluation/: metrics.py
src/generation/: legal_rag.py
src/ingestion/: alternative_vector_store.py  document_processor.py  fallback_vector_store.py  unified_pipeline.py  vector_store.py
src/retrieval/: retriever.py
src/ui/: streamlit_app.py  streamlit_app_broken.py  streamlit_app_fixed.py
src/utils/: __init__.py  chroma_fix.py  sqlite_fix.py
tests/: test_system.py
verification/: ASSIGNMENT_REPORT.md  assignment_results.json  config.yaml
verification/scripts/: generate_docs.py  simple_verify.py  verify_assignment.py
verification/tests/: test_app_smoke.py  test_citations_and_conflicts.py  test_dataset.py  test_latency.py  (+1 more)
(+6 files in other folders)
