[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-research-assistant"
version = "1.0.0"
description = "AI-powered legal document analysis with intelligent citations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Legal Research Assistant Team"}
]
keywords = ["legal", "ai", "document-analysis", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "PyMuPDF>=1.23.8",
    "python-docx>=1.0.0",
    "openai>=1.3.7",
    "google-generativeai>=0.3.2",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/karthiksuresh007/legal-research-assistant"
Documentation = "https://github.com/karthiksuresh007/legal-research-assistant#readme"
Repository = "https://github.com/karthiksuresh007/legal-research-assistant.git"
Issues = "https://github.com/karthiksuresh007/legal-research-assistant/issues"
